--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   provider: ^6.1.2
   firebase_auth: ^4.17.8
   firebase_storage: ^11.1.0
+  image_picker: ^1.0.8
 
 dev_dependencies:
   flutter_test:
